Add ZSA keyboard setup task
This will update the udev rules, install dependencies and download keymapp and
kontroll applications. keymapp latest release URL is static, but to find the
latest kontroll release we need to query GitHub API and parse the result.

--- a/main.yml
+++ b/main.yml
@@ -18,6 +18,8 @@
       tags: ['dropbox']
     - ansible.builtin.import_tasks: tasks/battery.yml
       tags: ['battery']
+    - ansible.builtin.import_tasks: tasks/zsa.yml
+      tags: ['zsa']
     - ansible.builtin.import_tasks: tasks/wm.yml
       tags: ['wm']
     - ansible.builtin.import_tasks: tasks/vm.yml
