--- a/tasks/basic.yml
+++ b/tasks/basic.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Install basic packages"
+- name: Install basic packages
   ansible.builtin.apt:
     name:
       - vim
@@ -18,28 +18,28 @@
       - jq
     state: present
 
-- name: "Copy vim config"
+- name: Copy vim config
   become: false
   ansible.builtin.copy:
     src: config/vimrc
     dest: ~/.vimrc
     mode: "0644"
 
-- name: "Copy tmux config"
+- name: Copy tmux config
   become: false
   ansible.builtin.copy:
     src: config/tmux.conf
     dest: ~/.tmux.conf
     mode: "0644"
 
-- name: "Copy git config"
+- name: Copy git config
   become: false
   ansible.builtin.copy:
     src: config/gitconfig
     dest: ~/.gitconfig
     mode: "0664"
 
-- name: "Copy tig config"
+- name: Copy tig config
   become: false
   ansible.builtin.copy:
     src: config/tigrc
