--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
-- name: "Reload udev"
-  ansible.builtin.command: "udevadm control --reload"
+- name: Reload udev
+  ansible.builtin.command: udevadm control --reload
   changed_when: false
