--- a/main.yml
+++ b/main.yml
@@ -1,38 +1,36 @@
 ---
-- name: "Set up laptop"
+- name: Set up laptop
   hosts: localhost
   user: tayken
   connection: local
 
   vars_files: []
-
   roles: []
-
   handlers:
     - ansible.builtin.import_tasks: handlers/main.yml
 
   tasks:
     - ansible.builtin.import_tasks: tasks/basic.yml
-      tags: ['basic']
+      tags: [basic]
     - ansible.builtin.import_tasks: tasks/dropbox.yml
-      tags: ['dropbox']
+      tags: [dropbox]
     - ansible.builtin.import_tasks: tasks/battery.yml
-      tags: ['battery']
+      tags: [battery]
     - ansible.builtin.import_tasks: tasks/zsa.yml
-      tags: ['zsa']
+      tags: [zsa]
     - ansible.builtin.import_tasks: tasks/wm.yml
-      tags: ['wm']
+      tags: [wm]
     - ansible.builtin.import_tasks: tasks/vm.yml
-      tags: ['vm']
+      tags: [vm]
     - ansible.builtin.import_tasks: tasks/docker.yml
-      tags: ['docker']
+      tags: [docker]
     - ansible.builtin.import_tasks: tasks/chrome.yml
-      tags: ['chrome']
+      tags: [chrome]
     - ansible.builtin.import_tasks: tasks/arm.yml
-      tags: ['arm']
+      tags: [arm]
     - ansible.builtin.import_tasks: tasks/vscode.yml
-      tags: ['vscode']
+      tags: [vscode]
     - ansible.builtin.import_tasks: tasks/electronics.yml
-      tags: ['electronics']
+      tags: [electronics]
     - ansible.builtin.import_tasks: tasks/sdr.yml
-      tags: ['sdr']
+      tags: [sdr]
