--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -1,27 +1,27 @@
 ---
-- name: "Install Docker dependencies"
+- name: Install Docker dependencies
   ansible.builtin.apt:
     name: ca-certificates
     state: present
 
-- name: "Ensure directory exists for /etc/apt/keyrings"
+- name: Ensure directory exists for /etc/apt/keyrings
   ansible.builtin.file:
     path: /etc/apt/keyrings
     state: directory
-    mode: '0755'
+    mode: "0755"
 
-- name: "Add Docker apt key"
+- name: Add Docker apt key
   ansible.builtin.get_url:
     url: https://download.docker.com/linux/ubuntu/gpg
     dest: /etc/apt/keyrings/docker.asc
-    mode: '0644'
+    mode: "0644"
 
-- name: "Add Docker repository"
+- name: Add Docker repository
   ansible.builtin.apt_repository:
     repo: deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
     state: present
 
-- name: "Install Docker packages"
+- name: Install Docker packages
   ansible.builtin.apt:
     name:
       - docker-ce
@@ -31,19 +31,19 @@
       - docker-compose-plugin
     state: present
 
-- name: "Start and enable Docker service"
+- name: Start and enable Docker service
   ansible.builtin.service:
     name: docker
-    state: "started"
+    state: started
     enabled: true
 
-- name: "Start and enable containerd service"
+- name: Start and enable containerd service
   ansible.builtin.service:
     name: containerd
-    state: "started"
+    state: started
     enabled: true
 
-- name: "Add user to the docker group"
+- name: Add user to the docker group
   ansible.builtin.user:
     name: "{{ ansible_user }}"
     groups: docker
