--- a/tasks/dropbox.yml
+++ b/tasks/dropbox.yml
@@ -1,4 +1,4 @@
 ---
-- name: "Install dropbox"
+- name: Install dropbox
   ansible.builtin.apt:
     deb: https://linux.dropbox.com/packages/ubuntu/dropbox_2020.03.04_amd64.deb
