--- a/tasks/wm.yml
+++ b/tasks/wm.yml
@@ -1,17 +1,17 @@
 ---
-- name: "Install window manager packages"
+- name: Install window manager packages
   ansible.builtin.apt:
     name: i3
     state: present
 
-- name: "Copy i3 config"
+- name: Copy i3 config
   become: false
   ansible.builtin.copy:
     src: config/i3-config
     dest: ~/.config/i3/config
     mode: "0664"
 
-- name: "Copy i3status config"
+- name: Copy i3status config
   become: false
   ansible.builtin.copy:
     src: config/i3status-config
