Add FreeCAD task
To get the latest release, we need to query GitHub API and parse the result. Had
to check two things to get the Linux AppImage file as the release includes the
SHA256 checksums with a similar name.

--- a/main.yml
+++ b/main.yml
@@ -32,5 +32,7 @@
       tags: [vscode]
     - ansible.builtin.import_tasks: tasks/electronics.yml
       tags: [electronics]
+    - ansible.builtin.import_tasks: tasks/freecad.yml
+      tags: [freecad]
     - ansible.builtin.import_tasks: tasks/sdr.yml
       tags: [sdr]
