Add Obsidian task
To get the latest release, we need to query GitHub API and parse the result.
Although an AppImage file is provided, I prefer to use .deb packages for this.
This may change in the future.

--- a/main.yml
+++ b/main.yml
@@ -26,6 +26,8 @@
       tags: [docker]
     - ansible.builtin.import_tasks: tasks/chrome.yml
       tags: [chrome]
+    - ansible.builtin.import_tasks: tasks/obsidian.yml
+      tags: [obsidian]
     - ansible.builtin.import_tasks: tasks/arm.yml
       tags: [arm]
     - ansible.builtin.import_tasks: tasks/vscode.yml
