--- a/tasks/wm.yml
+++ b/tasks/wm.yml
@@ -18,6 +18,12 @@
     state: directory
     mode: "0775"
 
+- name: Create xorg config folder
+  ansible.builtin.file:
+    path: /etc/X11/xorg.conf.d/
+    state: directory
+    mode: "0755"
+
 - name: Copy i3 config
   become: false
   ansible.builtin.copy:
@@ -30,4 +36,10 @@
   ansible.builtin.copy:
     src: config/i3status-config
     dest: ~/.config/i3status/config
+    mode: "0644"
+
+- name: Copy touchpad config
+  ansible.builtin.copy:
+    src: config/touchpad.conf
+    dest: /etc/X11/xorg.conf.d/90-touchpad.conf
     mode: "0644"
