--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ nocows = True
 roles_path = ./roles:/etc/ansible/roles
 inventory = inventory
 stdout_callback = yaml
+interpreter_python = auto_silent
 
 [privilege_escalation]
 become = True
