Update ZSA package dependency names
After upgrading to 24.04, package name is different. Found the new package name.

--- a/tasks/zsa.yml
+++ b/tasks/zsa.yml
@@ -3,7 +3,7 @@
   ansible.builtin.apt:
     name:
       - libwebkit2gtk-4.1-0
-      - libgtk-3-0
+      - libgtk-3-0t64
       - libusb-1.0-0
     state: present
 
