Add Hashicorp repo
After upgrading to Ubuntu 24.04, vagrant is not present in default Ubuntu
repositories. Found the installation instructions which say that you need to add
the repo.

--- a/tasks/vm.yml
+++ b/tasks/vm.yml
@@ -1,4 +1,15 @@
 ---
+- name: Add Hashicorp repository
+  ansible.builtin.deb822_repository:
+    name: hashicorp
+    types: deb
+    architectures: amd64
+    uris: https://apt.releases.hashicorp.com
+    signed_by: https://apt.releases.hashicorp.com/gpg
+    suites: "{{ ansible_distribution_release }}"
+    components: main
+    state: present
+
 - name: Install virtual machine packages
   ansible.builtin.apt:
     name:
