Add new task to install Ghidra
Will need to explicitly specify this one if I want it to run.

--- a/main.yml
+++ b/main.yml
@@ -40,3 +40,7 @@
       tags: [freecad]
     - ansible.builtin.import_tasks: tasks/sdr.yml
       tags: [sdr]
+    - ansible.builtin.import_tasks: tasks/reverse.yml
+      tags:
+        - reverse
+        - never
