--- a/tasks/electronics.yml
+++ b/tasks/electronics.yml
@@ -23,13 +23,13 @@
   become: false
   ansible.builtin.git:
     repo: https://github.com/im-tomu/tomu-quickstart.git
-    dest: ~/tomu-quickstart
+    dest: /home/{{ ansible_user }}/tomu-quickstart
 
 - name: Checkout Fomu repository
   become: false
   ansible.builtin.git:
     repo: https://github.com/im-tomu/fomu-workshop.git
-    dest: ~/fomu-workshop
+    dest: /home/{{ ansible_user }}/fomu-workshop
 
 - name: Copy Saleae Logic udev rules
   ansible.builtin.copy:
