--- a/tasks/wm.yml
+++ b/tasks/wm.yml
@@ -7,14 +7,14 @@
 - name: Create i3 config folder
   become: false
   ansible.builtin.file:
-    path: ~/.config/i3/
+    path: /home/{{ ansible_user }}/.config/i3/
     state: directory
     mode: "0775"
 
 - name: Create i3status config folder
   become: false
   ansible.builtin.file:
-    path: ~/.config/i3status/
+    path: /home/{{ ansible_user }}/.config/i3status/
     state: directory
     mode: "0775"
 
@@ -28,14 +28,14 @@
   become: false
   ansible.builtin.copy:
     src: config/i3-config
-    dest: ~/.config/i3/config
+    dest: /home/{{ ansible_user }}/.config/i3/config
     mode: "0664"
 
 - name: Copy i3status config
   become: false
   ansible.builtin.copy:
     src: config/i3status-config
-    dest: ~/.config/i3status/config
+    dest: /home/{{ ansible_user }}/.config/i3status/config
     mode: "0644"
 
 - name: Copy touchpad config
