Use virtual env for Cynthion package
Ubuntu doesn't like when you directly run pip anymore.

--- a/tasks/electronics.yml
+++ b/tasks/electronics.yml
@@ -76,6 +76,8 @@
 - name: Install cynthion python package
   ansible.builtin.pip:
     name: cynthion
+    virtualenv: /home/{{ ansible_user }}/cynthion
+    virtualenv_command: python3 -m venv
 
 - name: Check latest Packetry release
   ansible.builtin.uri:
