--- a/tasks/basic.yml
+++ b/tasks/basic.yml
@@ -57,3 +57,26 @@
     deb: "{{ github_cli_latest.json | community.general.json_query(url_query) | join('') }}"
   vars:
     url_query: assets[?contains(name,'linux_amd64.deb')].browser_download_url
+
+- name: Configure Git status
+  become: false
+  ansible.builtin.blockinfile:
+    path: /home/{{ ansible_user }}/.bashrc
+    insertbefore: '\$color_prompt'
+    append_newline: true
+    prepend_newline: true
+    block: |
+      GIT_PS1_SHOWDIRTYSTATE='y'
+      GIT_PS1_SHOWSTASHSTATE='y'
+      GIT_PS1_SHOWUNTRACKEDFILES='y'
+      GIT_PS1_SHOWUPSTREAM='auto verbose'
+      GIT_PS1_SHOWCONFLICTSTATE='yes'
+      GIT_PS1_DESCRIBE_STYLE='contains'
+      GIT_PS1_SHOWCOLORHINTS='y'
+
+- name: Insert Git status to bash prompt
+  become: false
+  ansible.builtin.replace:
+    path: /home/{{ ansible_user }}/.bashrc
+    regexp: '(?<!\$\(__git_ps1\))\\\$ '''
+    replace: '$(__git_ps1)\$ '''
