--- a/tasks/chrome.yml
+++ b/tasks/chrome.yml
@@ -1,4 +1,10 @@
 ---
+- name: Add Google Chrome repository
+  ansible.builtin.apt_repository:
+    repo: deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main
+    state: present
+
 - name: Install Google Chrome
   ansible.builtin.apt:
-    deb: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    name: google-chrome-stable
+    state: present
