--- a/tasks/kvm.yml
+++ b/tasks/kvm.yml
@@ -10,8 +10,15 @@
       - libqt6multimediawidgets6
       - libqt6serialport6
       - libqt6svg6
+      - libqt6concurrent6t64
       - libusb-1.0-0-dev
       - libssl-dev
+      - libavutil58
+      - libavformat60
+      - libavdevice60
+      - va-driver-all
+      - vainfo
+      - libva-dev
     state: present
 
 - name: Copy Openterface udev rules
@@ -37,4 +44,4 @@
   ansible.builtin.apt:
     deb: "{{ openterface_latest.json | community.general.json_query(url_query) | join('') }}"
   vars:
-    url_query: assets[?contains(name,'amd64.deb')].browser_download_url
+    url_query: assets[?contains(name,'amd64.shared.deb')].browser_download_url
