Make sure to check if ssh-agent is running before starting it
This way ssh-agent will be started only once when terminal is opened. As tmux is
started after the terminal is opened, this ssh-agent will be shared by all tmux
windows and panes. This way ssh-add command only needs to be ran once and ssh
key will be shared between tmux windows and panes.

--- a/tasks/basic.yml
+++ b/tasks/basic.yml
@@ -71,6 +71,7 @@
   become: false
   ansible.builtin.blockinfile:
     path: /home/{{ ansible_user }}/.bashrc
+    marker: "# {mark} Configure Git Status"
     insertbefore: '\$color_prompt'
     append_newline: true
     prepend_newline: true
@@ -92,7 +93,12 @@
 
 - name: Start ssh-agent automatically
   become: false
-  ansible.builtin.lineinfile:
+  ansible.builtin.blockinfile:
     path: /home/{{ ansible_user }}/.bashrc
-    regexp: 'ssh-agent'
-    line: 'eval "$(ssh-agent -s)" &>/dev/null'
+    marker: "# {mark} Start ssh-agent automatically"
+    append_newline: true
+    prepend_newline: true
+    block: |
+      if ! ps -ef | grep "[s]sh-agent" &>/dev/null; then
+        eval "$(ssh-agent -s)" &>/dev/null
+      fi
